@@ -1,366 +1,464 @@
 package com.prx.directory.api.v1.service;
 
 import com.prx.commons.general.pojo.Application;
-import com.prx.commons.general.pojo.Person;
 import com.prx.commons.general.pojo.Role;
 import com.prx.directory.api.v1.to.*;
 import com.prx.directory.client.backbone.BackboneClient;
 import com.prx.directory.client.backbone.to.BackboneUserGetResponse;
+import com.prx.directory.client.backbone.to.BackboneUserUpdateRequest;
+import com.prx.directory.constant.RoleKey;
 import com.prx.directory.jpa.entity.BusinessEntity;
 import com.prx.directory.jpa.entity.CategoryEntity;
 import com.prx.directory.jpa.entity.UserEntity;
 import com.prx.directory.jpa.repository.BusinessRepository;
+import com.prx.directory.jpa.repository.CategoryRepository;
+import com.prx.directory.jpa.repository.DigitalContactRepository;
 import com.prx.directory.mapper.BusinessMapper;
 import com.prx.directory.util.JwtUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.test.util.ReflectionTestUtils;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
-@ExtendWith(value = {SpringExtension.class})
 class BusinessServiceImplTest {
 
     @Mock
-    UserService userService;
+    private UserService userService;
 
     @Mock
     private BusinessRepository businessRepository;
 
     @Mock
-    private BusinessMapper businessMapper;
+    private BackboneClient backboneClient;
 
     @Mock
-    BackboneClient backboneClient;
+    private CategoryRepository categoryRepository;
+
+    @Mock
+    private DigitalContactRepository digitalContactRepository;
+
+    @Mock
+    private BusinessMapper businessMapper;
 
     @InjectMocks
-    BusinessServiceImpl businessService;
-
-    private static final String T_VALUE = "Consistently relief adidas vessel ranks rica myanmar.";
+    private BusinessServiceImpl businessService;
 
     @BeforeEach
     void setUp() {
-        ReflectionTestUtils.setField(businessService, "initialRoleId", "123e4567-e89b-12d3-a456-426614174001");
+        MockitoAnnotations.openMocks(this);
     }
 
+    // --- create(...) tests ---
+
     @Test
-    @DisplayName("Create business successfully")
-    void createBusinessSuccessfully() {
-        BusinessCreateRequest request = getBusinessCreateRequest();
-        BusinessEntity businessEntity = getBusinessEntity();
-        Person person = new Person();
-        person.setGender("M");
-        person.setFirstName("John");
-        person.setLastName("Connor");
-        person.setBirthdate(LocalDate.parse("1984-05-12"));
-        person.setMiddleName("Marcus");
-        var role = new Role();
+    @DisplayName("create - success")
+    void createBusiness_success() {
+        UUID userId = UUID.randomUUID();
+        UUID categoryId = UUID.randomUUID();
+        Role role = new Role();
+        BusinessCreateRequest req = new BusinessCreateRequest(
+                "Example Business",
+                "Description",
+                categoryId,
+                userId,
+                "email@example.com",
+                "support@example.com",
+                "orders@example.com",
+                "https://example.com");
+
+        BusinessEntity entity = new BusinessEntity();
+        entity.setId(UUID.randomUUID());
+        entity.setName(req.name());
+        entity.setCreatedDate(LocalDateTime.now());
+        entity.setLastUpdate(LocalDateTime.now());
+
         role.setId(UUID.randomUUID());
-        role.setName("Role Name");
-        role.setDescription("Role Description");
-        role.setActive(true);
-        var roles = List.of(role);
-        var applications = List.of(new Application());
+        role.setName(RoleKey.LH_STANDARD.name());
+
         BackboneUserGetResponse backboneUserGetResponse = new BackboneUserGetResponse(
-                UUID.randomUUID(),
-                "Alias",
-                "123456789hgf",
-                "frodo@shire.com",
-                "The Frod",
+                userId,
+                "alias",
+                "12345GTGT",
+                "user@email.com",
+                "displayName",
                 LocalDateTime.now(),
                 LocalDateTime.now(),
                 true,
                 true,
                 true,
                 true,
-                person,
-                roles,
-                applications
+                null,
+                List.of(role),
+                List.of(new Application())
         );
 
+        // For a successful create, no existing business with same name
+        when(businessRepository.findByName(req.name())).thenReturn(Optional.empty());
+        when(backboneClient.findUserById(userId)).thenReturn(backboneUserGetResponse);
+        when(businessMapper.toSource(req)).thenReturn(entity);
+        when(businessRepository.save(entity)).thenReturn(entity);
+        when(businessMapper.toBusinessCreateResponse(entity)).thenReturn(
+                new BusinessCreateResponse(entity.getId(), entity.getName(), entity.getCreatedDate(), entity.getLastUpdate())
+        );
 
-        when(backboneClient.findUserById(any(UUID.class))).thenReturn(backboneUserGetResponse);
-        when(businessMapper.toSource(any(BusinessCreateRequest.class))).thenReturn(businessEntity);
-        when(businessRepository.save(any(BusinessEntity.class))).thenReturn(businessEntity);
-        when(businessMapper.toBusinessCreateResponse(any(BusinessEntity.class)))
-                .thenReturn(getBusinessCreateResponse());
-
-        ResponseEntity<BusinessCreateResponse> response = businessService.create(request);
+        ResponseEntity<BusinessCreateResponse> response = businessService.create(req);
 
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(entity.getId(), response.getBody().id());
     }
 
     @Test
-    @DisplayName("Create business with null request")
-    void createBusinessWithNullRequest() {
+    @DisplayName("create - null request -> BAD_REQUEST")
+    void createBusiness_nullRequest_badRequest() {
         ResponseEntity<BusinessCreateResponse> response = businessService.create(null);
-
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
     }
 
     @Test
-    @DisplayName("Create business with duplicate name")
-    void createBusinessWithDuplicateName() {
-        BusinessCreateRequest request = getBusinessCreateRequest();
+    @DisplayName("create - duplicate name -> CONFLICT")
+    void createBusiness_duplicateName_conflict() {
+        BusinessCreateRequest req = new BusinessCreateRequest(
+                "Example Business",
+                "Description",
+                UUID.randomUUID(),
+                UUID.randomUUID(),
+                "email@example.com",
+                null,
+                null,
+                null);
 
-        when(businessMapper.toSource(any(BusinessCreateRequest.class))).thenReturn(getBusinessEntity());
-        when(businessRepository.save(any(BusinessEntity.class))).thenThrow(new RuntimeException("Duplicate business name"));
+        when(businessRepository.findByName(req.name())).thenReturn(Optional.of(new BusinessEntity()));
 
-        ResponseEntity<BusinessCreateResponse> response = businessService.create(request);
-
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        ResponseEntity<BusinessCreateResponse> response = businessService.create(req);
+        assertEquals(HttpStatus.CONFLICT, response.getStatusCode());
     }
 
     @Test
-    @DisplayName("Create business with invalid email")
-    void createBusinessWithInvalidEmail() {
-        BusinessCreateRequest request = new BusinessCreateRequest(
+    @DisplayName("create - user not found in backbone -> BAD_REQUEST")
+    void createBusiness_userNotFound_badRequest() {
+        BusinessCreateRequest req = new BusinessCreateRequest(
                 "Example Business",
-                "This is an example business description.",
+                "Description",
                 UUID.randomUUID(),
                 UUID.randomUUID(),
-                "user@##email.ext",
-                "user@email.ext",
-                "user@$$email.ext",
-                "www.example.com"
-        );
+                "email@example.com",
+                null,
+                null,
+                null);
 
-        ResponseEntity<BusinessCreateResponse> response = businessService.create(request);
+        when(businessRepository.findByName(req.name())).thenReturn(Optional.empty());
+        when(backboneClient.findUserById(req.userId())).thenReturn(null);
 
+        ResponseEntity<BusinessCreateResponse> response = businessService.create(req);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
     }
 
-    private static BusinessCreateRequest getBusinessCreateRequest() {
-        return new BusinessCreateRequest(
-                "Example Business",
-                "This is an example business description.",
-                UUID.randomUUID(),
-                UUID.randomUUID(),
-                "user@email.ext",
-                "user@email.ext",
-                "user@email.ext",
-                "www.example.com"
-        );
-    }
-
-    private static BusinessCreateResponse getBusinessCreateResponse() {
-        return new BusinessCreateResponse(
-                UUID.randomUUID(),
-                "Example Business",
-                LocalDateTime.now(),
-                LocalDateTime.now()
-        );
-    }
-
-    private static BusinessEntity getBusinessEntity() {
-        BusinessEntity businessEntity = new BusinessEntity();
-        CategoryEntity categoryEntity = new CategoryEntity();
-        UserEntity userEntity = new UserEntity();
-        categoryEntity.setId(UUID.randomUUID());
-        userEntity.setId(UUID.randomUUID());
-        businessEntity.setId(UUID.randomUUID());
-        businessEntity.setName("Example Business");
-        businessEntity.setDescription("This is an example business description.");
-        businessEntity.setCategoryFk(categoryEntity);
-        businessEntity.setUserFk(userEntity);
-        businessEntity.setLastUpdate(LocalDateTime.now());
-        businessEntity.setCreatedDate(LocalDateTime.now());
-
-        return businessEntity;
-    }
+    // --- findById(...) tests ---
 
     @Test
-    @DisplayName("Find business by ID successfully")
-    void findBusinessByIdSuccessfully() {
+    @DisplayName("findById - success")
+    void findById_success() {
         UUID id = UUID.randomUUID();
-        BusinessEntity business = new BusinessEntity();
-        UUID timezone = UUID.randomUUID();
-        var businessTO = new BusinessTO(
-                id,
-                "Example Business",
-                "This is an example business description.",
-                UUID.randomUUID(),
-                UUID.randomUUID(),
-                "user@domain.ext",
-                "user@domain.ext",
-                "user@domain.ext",
-                "domain.ext",
+        BusinessEntity entity = new BusinessEntity();
+        entity.setId(id);
+
+        BusinessTO to = new BusinessTO(id, "Name", "Desc", UUID.randomUUID(), UUID.randomUUID(),
+                "email", null, null, null, LocalDateTime.now(), LocalDateTime.now(), false, UUID.randomUUID());
+
+        when(businessRepository.findBusinessWithDigitalContactsById(id)).thenReturn(Optional.of(entity));
+        when(businessMapper.toBusinessTO(entity)).thenReturn(to);
+
+        ResponseEntity<BusinessTO> response = businessService.findById(id);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(id, Objects.requireNonNull(response.getBody()).id());
+    }
+
+    @Test
+    @DisplayName("findById - not found")
+    void findById_notFound() {
+        UUID id = UUID.randomUUID();
+        when(businessRepository.findBusinessWithDigitalContactsById(id)).thenReturn(Optional.empty());
+
+        ResponseEntity<BusinessTO> response = businessService.findById(id);
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
+
+    // --- findByUserId(...) tests ---
+
+    @Test
+    @DisplayName("findByUserId - success with results")
+    void findByUserId_success() {
+        UUID userId = UUID.randomUUID();
+        BusinessEntity entity = new BusinessEntity();
+        entity.setId(UUID.randomUUID());
+        Set<BusinessEntity> entities = Set.of(entity);
+
+        BusinessTO to = new BusinessTO(entity.getId(), "Name", "Desc", userId, UUID.randomUUID(),
+                "email", null, null, null, LocalDateTime.now(), LocalDateTime.now(), false, UUID.randomUUID());
+
+        when(businessRepository.findByUserEntityFk(userId)).thenReturn(entities);
+        when(businessMapper.toBusinessTO(entity)).thenReturn(to);
+
+        ResponseEntity<Set<BusinessTO>> response = businessService.findByUserId(userId);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertFalse(Objects.requireNonNull(response.getBody()).isEmpty());
+    }
+
+    @Test
+    @DisplayName("findByUserId - empty result")
+    void findByUserId_empty() {
+        UUID userId = UUID.randomUUID();
+        when(businessRepository.findByUserEntityFk(userId)).thenReturn(Collections.emptySet());
+
+        ResponseEntity<Set<BusinessTO>> response = businessService.findByUserId(userId);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(Objects.requireNonNull(response.getBody()).isEmpty());
+    }
+
+    // --- findByName(...) tests ---
+
+    @Test
+    @DisplayName("findByName - success")
+    void findByName_success() {
+        String name = "Example";
+        BusinessEntity entity = new BusinessEntity();
+        entity.setId(UUID.randomUUID());
+
+        BusinessTO to = new BusinessTO(entity.getId(), name, "Desc", UUID.randomUUID(), UUID.randomUUID(),
+                "email", null, null, null, LocalDateTime.now(), LocalDateTime.now(), false, UUID.randomUUID());
+
+        when(businessRepository.findByName(name)).thenReturn(Optional.of(entity));
+        when(businessMapper.toBusinessTO(entity)).thenReturn(to);
+
+        ResponseEntity<BusinessTO> response = businessService.findByName(name);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(name, Objects.requireNonNull(response.getBody()).name());
+    }
+
+    @Test
+    @DisplayName("findByName - blank name -> BAD_REQUEST")
+    void findByName_blank_badRequest() {
+        ResponseEntity<BusinessTO> response = businessService.findByName(" ");
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+    }
+
+    @Test
+    @DisplayName("findByName - not found")
+    void findByName_notFound() {
+        String name = "Unknown";
+        when(businessRepository.findByName(name)).thenReturn(Optional.empty());
+
+        ResponseEntity<BusinessTO> response = businessService.findByName(name);
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
+
+    // --- update(...) tests (existing three extended a bit) ---
+
+    @Test
+    void testUpdateBusinessSuccess() {
+        UUID businessId = UUID.randomUUID();
+        BusinessUpdateRequest request = new BusinessUpdateRequest(
+                businessId,
+                "Updated Name",
+                "Updated Description",
+                null,
+                "contact@example.com",
+                "support@example.com",
+                "orders@example.com",
+                "https://example.com");
+
+        BusinessEntity existingBusiness = new BusinessEntity();
+        existingBusiness.setId(businessId);
+
+        // Stub business lookup
+        when(businessRepository.findBusinessWithDigitalContactsById(businessId)).thenReturn(Optional.of(existingBusiness));
+        // No duplicate name
+        when(businessRepository.findByName(request.name())).thenReturn(Optional.empty());
+        // Stub user lookup using request.id() (here businessId is reused as userId in service logic)
+        BackboneUserGetResponse backboneUserGetResponse = new BackboneUserGetResponse(
+                businessId,
+                "alias",
+                "12345GTGT",
+                "user@email.com",
+                "displayName",
                 LocalDateTime.now(),
                 LocalDateTime.now(),
                 true,
-                timezone
+                true,
+                true,
+                true,
+                null,
+                List.of(new Role()),
+                List.of(new Application())
         );
+        when(backboneClient.findUserById(businessId)).thenReturn(backboneUserGetResponse);
+        // Save returns updated entity
+        when(businessRepository.save(any(BusinessEntity.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        when(businessRepository.findBusinessWithDigitalContactsById(id)).thenReturn(Optional.of(business));
-        when(businessMapper.toBusinessTO(business)).thenReturn(businessTO);
+        ResponseEntity<BusinessUpdateResponse> response = businessService.update(businessId, request);
 
-        ResponseEntity<BusinessTO> response = businessService.findById(id);
-
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK.value(), response.getStatusCode().value());
+        assertNotNull(response.getBody());
+        assertNotNull(response.getBody().updatedDate());
     }
 
     @Test
-    @DisplayName("Find business by non-existent ID")
-    void findBusinessByNonExistentId() {
-        UUID id = UUID.randomUUID();
+    void testUpdateBusinessNotFound() {
+        UUID businessId = UUID.randomUUID();
+        BusinessUpdateRequest request = new BusinessUpdateRequest(
+                businessId,
+                "Updated Name",
+                "Updated Description",
+                null,
+                "contact@example.com",
+                "support@example.com",
+                "orders@example.com",
+                "https://example.com");
 
-        when(businessRepository.findById(id)).thenReturn(Optional.empty());
+        when(businessRepository.findBusinessWithDigitalContactsById(businessId)).thenReturn(Optional.empty());
 
-        ResponseEntity<BusinessTO> response = businessService.findById(id);
+        ResponseEntity<BusinessUpdateResponse> response = businessService.update(businessId, request);
 
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        assertNotNull(response);
+        assertEquals(HttpStatus.NOT_FOUND.value(), response.getStatusCode().value());
     }
 
     @Test
-    @DisplayName("Find business by null ID")
-    void findBusinessByNullId() {
-        ResponseEntity<BusinessTO> response = businessService.findById(null);
+    void testUpdateBusinessValidationFailure() {
+        ResponseEntity<BusinessUpdateResponse> response = businessService.update(UUID.randomUUID(), null);
 
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+        assertNotNull(response);
+        assertEquals(HttpStatus.BAD_REQUEST.value(), response.getStatusCode().value());
     }
 
     @Test
-    @DisplayName("Find businesses by user ID successfully")
-    void findBusinessesByUserIdSuccessfully() {
-        UUID userId = UUID.randomUUID();
-        Set<BusinessEntity> businessPage = Set.of(new BusinessEntity());
-        UUID timezone = UUID.randomUUID();
-        BusinessTO businessTO = new BusinessTO(UUID.randomUUID(),
-                "Example Business",
-                "This is an example business description.",
-                UUID.randomUUID(),
-                UUID.randomUUID(),
-                "user@domain.ext",
-                "user1@domain.ext",
-                "user1@domain.ext",
-                "domain.ext",
-                LocalDateTime.now(),
-                LocalDateTime.now(), false, timezone);
-        when(businessRepository.findByUserEntityFk(any(UUID.class))).thenReturn(businessPage);
-        when(businessMapper.toBusinessTO(any(BusinessEntity.class))).thenReturn(businessTO);
+    @DisplayName("update - invalid website -> BAD_REQUEST")
+    void update_invalidWebsite_badRequest() {
+        UUID businessId = UUID.randomUUID();
+        // Set id to null so that user validation is skipped and website is the first error
+        BusinessUpdateRequest request = new BusinessUpdateRequest(
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                "invalid-url");
 
-        ResponseEntity<Set<BusinessTO>> response = businessService.findByUserId(userId);
+        BusinessEntity existingBusiness = new BusinessEntity();
+        existingBusiness.setId(businessId);
+        when(businessRepository.findBusinessWithDigitalContactsById(businessId)).thenReturn(Optional.of(existingBusiness));
 
-        assertEquals(HttpStatus.OK, response.getStatusCode());
+        ResponseEntity<BusinessUpdateResponse> response = businessService.update(businessId, request);
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
     }
 
-    @Test
-    @DisplayName("Find businesses by user ID with empty result")
-    void findBusinessesByUserIdWithEmptyResult() {
-        UUID userId = UUID.randomUUID();
-        Set<BusinessEntity> businessEntities = Collections.emptySet();
-
-        when(businessRepository.findByUserEntityFk(any(UUID.class))).thenReturn(businessEntities);
-
-        ResponseEntity<Set<BusinessTO>> response = businessService.findByUserId(userId);
-
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-    }
+    // --- deleteBusiness(...) tests ---
 
     @Test
-    @DisplayName("Delete business successfully as owner")
-    void deleteBusinessSuccessfullyAsOwner() {
+    @DisplayName("deleteBusiness - success as owner")
+    void deleteBusiness_successOwner() {
         UUID businessId = UUID.randomUUID();
         UUID userId = UUID.randomUUID();
-        BusinessEntity businessEntity = new BusinessEntity();
-        UserEntity userEntity = new UserEntity();
-        userEntity.setId(userId);
-        businessEntity.setId(businessId);
-        businessEntity.setUserFk(userEntity);
-        try (MockedStatic<JwtUtil> mockedStatic = Mockito.mockStatic(JwtUtil.class)) {
-            mockedStatic.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(userId);
 
-            when(businessRepository.findById(businessId)).thenReturn(Optional.of(businessEntity));
-            when(businessRepository.countByUserId(any(UUID.class))).thenReturn(0);
-            when(userService.findUser(anyString(), any(UUID.class))).thenReturn(ResponseEntity.ok(getUserResponse(userId)));
-            when(userService.update(any(UUID.class), any(PutUserRequest.class))).thenReturn(ResponseEntity.ok().build());
-            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, T_VALUE);
-            assertEquals(HttpStatus.ACCEPTED, response.getStatusCode());
+        BusinessEntity entity = new BusinessEntity();
+        entity.setId(businessId);
+        UserEntity user = new UserEntity();
+        user.setId(userId);
+        entity.setUserFk(user);
+
+        try (MockedStatic<JwtUtil> jwtMock = Mockito.mockStatic(JwtUtil.class)) {
+            jwtMock.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(userId);
+            when(businessRepository.findById(businessId)).thenReturn(Optional.of(entity));
+            when(businessRepository.countByUserId(userId)).thenReturn(1);
+
+            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, "token");
+            assertEquals(HttpStatus.OK, response.getStatusCode());
         }
     }
 
     @Test
-    @DisplayName("Delete business forbidden when not owner")
-    void deleteBusinessForbiddenWhenNotOwner() {
+    @DisplayName("deleteBusiness - not owner -> FORBIDDEN")
+    void deleteBusiness_notOwner_forbidden() {
         UUID businessId = UUID.randomUUID();
+        UUID tokenUserId = UUID.randomUUID();
         UUID ownerId = UUID.randomUUID();
-        BusinessEntity businessEntity = new BusinessEntity();
-        UserEntity userEntity = new UserEntity();
-        userEntity.setId(ownerId);
-        businessEntity.setId(businessId);
-        businessEntity.setUserFk(userEntity);
-        try (MockedStatic<JwtUtil> mockedStatic = Mockito.mockStatic(JwtUtil.class)) {
-            mockedStatic.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(UUID.randomUUID());
 
-            when(businessRepository.findById(businessId)).thenReturn(Optional.of(businessEntity));
-            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, T_VALUE);
+        BusinessEntity entity = new BusinessEntity();
+        entity.setId(businessId);
+        UserEntity user = new UserEntity();
+        user.setId(ownerId);
+        entity.setUserFk(user);
+
+        try (MockedStatic<JwtUtil> jwtMock = Mockito.mockStatic(JwtUtil.class)) {
+            jwtMock.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(tokenUserId);
+            when(businessRepository.findById(businessId)).thenReturn(Optional.of(entity));
+
+            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, "token");
             assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode());
         }
     }
 
     @Test
-    @DisplayName("Delete business not found")
-    void deleteBusinessNotFound() {
+    @DisplayName("deleteBusiness - business not found -> NOT_FOUND")
+    void deleteBusiness_notFound() {
         UUID businessId = UUID.randomUUID();
-        try (MockedStatic<JwtUtil> mockedStatic = Mockito.mockStatic(JwtUtil.class)) {
-            mockedStatic.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(UUID.randomUUID());
 
+        try (MockedStatic<JwtUtil> jwtMock = Mockito.mockStatic(JwtUtil.class)) {
+            jwtMock.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(UUID.randomUUID());
             when(businessRepository.findById(businessId)).thenReturn(Optional.empty());
-            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, T_VALUE);
+
+            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, "token");
             assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
         }
     }
 
     @Test
-    @DisplayName("Delete business internal server error")
-    void deleteBusinessInternalServerError() {
+    @DisplayName("deleteBusiness - invalid token -> UNAUTHORIZED")
+    void deleteBusiness_invalidToken_unauthorized() {
         UUID businessId = UUID.randomUUID();
-        try (MockedStatic<JwtUtil> mockedStatic = Mockito.mockStatic(JwtUtil.class)) {
-            mockedStatic.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(UUID.randomUUID());
 
-            when(businessRepository.findById(businessId)).thenThrow(new RuntimeException("DB error"));
-            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, T_VALUE);
-            assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+        try (MockedStatic<JwtUtil> jwtMock = Mockito.mockStatic(JwtUtil.class)) {
+            jwtMock.when(() -> JwtUtil.getUidFromToken(anyString())).thenReturn(null);
+
+            ResponseEntity<Void> response = businessService.deleteBusiness(businessId, "token");
+            assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
         }
     }
 
-    private static GetUserResponse getUserResponse(UUID userId) {
-        String profileImageRef = "LTHB/3171803c-bb08-4eb0-8821-b6ebe5948f48-250723104035.jpg";
-        String alias = "userAlias";
-        String email = "user@example.com";
-        String firstName = "First";
-        String middleName = "Middle";
-        String lastName = "Last";
-        String displayName = "Alias Name";
-        UUID phoneId = UUID.randomUUID();
-        String phoneNumber = "(+1) 4167489302";
-        LocalDate dateOfBirth = LocalDate.now();
-        LocalDateTime createdAt = LocalDateTime.now();
-        LocalDateTime updatedAt = LocalDateTime.now();
-        boolean notificationEmail = true;
-        boolean notificationSms = true;
-        boolean privacyDataOutActive = true;
-        boolean status = true;
-        UUID roleId = UUID.randomUUID();
-        UUID applicationId = UUID.randomUUID();
+    // --- findIdByUserId(...) tests ---
 
-        return new GetUserResponse(userId, alias, email, firstName, middleName, lastName, displayName, profileImageRef,
-                phoneId, phoneNumber, Collections.emptySet(), dateOfBirth, createdAt, updatedAt, notificationEmail, notificationSms, privacyDataOutActive, status, roleId, applicationId);
+    @Test
+    @DisplayName("findIdByUserId - null id -> empty set")
+    void findIdByUserId_null_returnsEmpty() {
+        Set<UUID> result = businessService.findIdByUserId(null);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    @DisplayName("findIdByUserId - success")
+    void findIdByUserId_success() {
+        UUID userId = UUID.randomUUID();
+        Set<UUID> ids = Set.of(UUID.randomUUID(), UUID.randomUUID());
+        when(businessRepository.findIdCollectionByUserId(userId)).thenReturn(ids);
+
+        Set<UUID> result = businessService.findIdByUserId(userId);
+        assertEquals(ids, result);
     }
 }
